--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -50,7 +50,7 @@ body {
     width: 80%;
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 10px;
   }
   button[type="submit"] {
     background-color: #4b4f4b;
@@ -63,5 +63,9 @@ body {
   }
   button[type="submit"]:hover {
     background-color: #272a27;
+  }
+  button{
+    border: none;
+    background-color: white;
   }
   
